# internal/handler/sections_handler.go
@@ -35,8 +35,14 @@ func NewSectionHandler(service internal.SectionService) *SectionHandler {
 	return &SectionHandler{service}
 }
 
-// Get all the sections - 200
-// An error not mapped - 500
+// GetAll handles the HTTP request to retrieve all sections.
+// @Summary Get all sections
+// @Description Retrieve a list of all sections
+// @Tags sections
+// @Produce json
+// @Success 200 {array} internal.Section "List of sections"
+// @Failure 500 {object} utils.ErrorResponse "Internal server error"
+// @Router /api/v1/sections [get]
 func (h *SectionHandler) GetAll() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		sections, err := h.service.GetAll()
@@ -49,10 +55,18 @@ func (h *SectionHandler) GetAll() http.HandlerFunc {
 	}
 }
 
-// Get the section by Id - 200
-// If the id is in the wrong format - 400
-// If the section doesn't exist - 404
-// An error not mapped - 500
+// GetById godoc
+// @Summary Get section by ID
+// @Description Get a section by its ID
+// @Tags sections
+// @Accept json
+// @Produce json
+// @Param id path int true "Section ID"
+// @Success 200 {object} internal.Section
+// @Failure 400 {object} utils.ErrorResponse "Invalid ID"
+// @Failure 404 {object} utils.ErrorResponse "Section not found"
+// @Failure 500 {object} utils.ErrorResponse "Internal server error"
+// @Router /api/v1/sections/{id} [get]
 func (h *SectionHandler) GetById() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		id, err := strconv.Atoi(chi.URLParam(r, "id"))
@@ -77,11 +91,20 @@ func (h *SectionHandler) GetById() http.HandlerFunc {
 	}
 }
 
-// Save the section - 201
-// If payload is in the wrong format - 400
-// If a section already exists for section_number - 409
-// If the payload contains invalid or empty fields for mandatory data - 422
-// An error not mapped - 500
+// Post handles the creation of a new section.
+//
+// @Summary Create a new section
+// @Description Create a new section with the provided details
+// @Tags sections
+// @Accept json
+// @Produce json
+// @Param section body reqPostSection true "Section details"
+// @Success 201 {object} internal.Section
+// @Failure 400 {object} utils.ErrorResponse "Invalid request format"
+// @Failure 409 {object} utils.ErrorResponse "Section conflict"
+// @Failure 422 {object} utils.ErrorResponse "Invalid arguments"
+// @Failure 500 {object} utils.ErrorResponse "Internal server error"
+// @Router /api/v1/sections [post]
 func (h *SectionHandler) Post() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var body reqPostSection
@@ -122,11 +145,20 @@ func (h *SectionHandler) Post() http.HandlerFunc {
 	}
 }
 
-// Update the section - 200
-// If payload or Id is in a incorrect format - 400
-// If a section already exists for section_number - 409
-// If the payload contains invalid or empty fields for mandatory data - 422
-// An error not mapped - 500
+// Update godoc
+// @Summary Update a section
+// @Description Update a section by ID
+// @Tags sections
+// @Accept json
+// @Produce json
+// @Param id path int true "Section ID"
+// @Param section body internal.SectionPointers true "Section data"
+// @Success 200 {object} internal.Section
+// @Failure 400 {object} utils.ErrorResponse "Invalid ID or request body"
+// @Failure 409 {object} utils.ErrorResponse "Conflict error"
+// @Failure 422 {object} utils.ErrorResponse "Unprocessable entity"
+// @Failure 500 {object} utils.ErrorResponse "Internal server error"
+// @Router /api/v1/sections/{id} [put]
 func (h *SectionHandler) Update() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		id, err := strconv.Atoi(chi.URLParam(r, "id"))
@@ -162,10 +194,19 @@ func (h *SectionHandler) Update() http.HandlerFunc {
 	}
 }
 
-// Delete a section by id - 204
-// If the id is in the wrong format - 400
-// If the section doesn't exist - 404
-// An error not mapped - 500
+// Delete handles the deletion of a section by its ID.
+//
+// @Summary Delete a section
+// @Description Delete a section by its ID
+// @Tags sections
+// @Accept json
+// @Produce json
+// @Param id path int true "Section ID"
+// @Success 204 {object} nil "No Content"
+// @Failure 400 {object} utils.ErrorResponse "Invalid ID"
+// @Failure 404 {object} utils.ErrorResponse "Section not found"
+// @Failure 500 {object} utils.ErrorResponse "Internal Server Error"
+// @Router /api/v1/sections/{id} [delete]
 func (h *SectionHandler) Delete() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		id, err := strconv.Atoi(chi.URLParam(r, "id"))
@@ -190,6 +231,18 @@ func (h *SectionHandler) Delete() http.HandlerFunc {
 	}
 }
 
+// GetSectionProductsReport godoc
+// @Summary Get section products report
+// @Description Retrieves a report of products for a given section ID
+// @Tags sections
+// @Accept json
+// @Produce json
+// @Param id query int false "Section ID"
+// @Success 200 {object} internal.SectionProductsReport
+// @Failure 400 {object} utils.ErrorResponse "Invalid ID"
+// @Failure 404 {object} utils.ErrorResponse "Section not found"
+// @Failure 500 {object} utils.ErrorResponse "Internal server error"
+// @Router /api/v1/sections/products/report [get]
 func (h *SectionHandler) GetSectionProductsReport() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		idReq := strings.TrimSpace(r.URL.Query().Get("id"))
